RQ-0220: Add multi-user support and team workspaces
